# nix-stylish-haskell-check

./: .gitignore  CHANGELOG.md  README.md  default.nix
.github/workflows/: test.yml
test/: default.nix  negative-tests.nix
test/example-haskell-proj/: .stylish-haskell.yaml  Main.hs  example-haskell-proj.cabal
test/example-haskell-proj-bad/: Main.hs  example-haskell-proj-bad.cabal
